# chatbot

./: README.md
backend/: .gitignore  app.py  chatmanager.py  model.py  params.py  pyproject.toml  requirements.txt  retriever.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/lib/components/: FloatingFocus.svelte  Loader.svelte  Messages.svelte  TextBox.svelte
frontend/src/lib/components/Icons/: SendIcon.svelte
frontend/src/lib/stores/: chat.ts
frontend/src/lib/styles/: floating-focus.css  globals.scss
frontend/src/lib/types/: message.d.ts
frontend/src/routes/: +layout.svelte  +page.svelte
