[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MrBased <felipeaguilarwenig@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.42.0"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langchain-community = "^0.2.12"
langchain-core = "^0.2.34"
faiss-gpu = "^1.7.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
