[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MrBased <felipeaguilarwenig@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.42.0"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langchain-community = "^0.2.12"
langchain-core = "^0.2.34"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
pypdf = "^4.3.1"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
